MARKING/sidd1303/MARKS/02javadoc.err
Loading source file ca/utoronto/utm/assignment1/othello/Move.java...
Loading source file ca/utoronto/utm/assignment1/othello/OthelloBoard.java...
Loading source file ca/utoronto/utm/assignment1/othello/OthelloControllerHumanVSGreedy.java...
Loading source file ca/utoronto/utm/assignment1/othello/OthelloControllerHumanVSHuman.java...
Loading source file ca/utoronto/utm/assignment1/othello/OthelloControllerHumanVSRandom.java...
Loading source file ca/utoronto/utm/assignment1/othello/OthelloControllerRandomVSGreedy.java...
Loading source file ca/utoronto/utm/assignment1/othello/OthelloControllerRandomVSRandom.java...
Loading source file ca/utoronto/utm/assignment1/othello/Othello.java...
Loading source file ca/utoronto/utm/assignment1/othello/ParentController.java...
Loading source file ca/utoronto/utm/assignment1/othello/ParentPlayer.java...
Loading source file ca/utoronto/utm/assignment1/othello/PlayerGreedy.java...
Loading source file ca/utoronto/utm/assignment1/othello/PlayerHuman.java...
Loading source file ca/utoronto/utm/assignment1/othello/PlayerRandom.java...
Loading source file ca/utoronto/utm/assignment1/othello/RandomvsRandomTest.java...
Constructing Javadoc information...
Building index for all the packages and classes...
Standard Doclet version 22.0.1+8-16
Building tree for all the packages and classes...
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/ca/utoronto/utm/assignment1/othello/Move.html...
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/ca/utoronto/utm/assignment1/othello/Othello.html...
ca/utoronto/utm/assignment1/othello/Othello.java:43: warning: no description for @param
	 * @param row
	   ^
ca/utoronto/utm/assignment1/othello/Othello.java:44: warning: no description for @param
	 * @param col
	   ^
ca/utoronto/utm/assignment1/othello/Othello.java:58: warning: no main description
	 * @param player P1 or P2
	   ^
ca/utoronto/utm/assignment1/othello/Othello.java:83: warning: no main description
	 * @return whether the game is over (no player can move next)
	   ^
ca/utoronto/utm/assignment1/othello/Othello.java:94: warning: no description for @param
	 * @param row
	   ^
ca/utoronto/utm/assignment1/othello/Othello.java:95: warning: no description for @param
	 * @param col
	   ^
ca/utoronto/utm/assignment1/othello/Othello.java:135: warning: no main description
	 * @return a string representation of the board.
	   ^
ca/utoronto/utm/assignment1/othello/Othello.java:145: warning: no description for @param
	 * @param args
	   ^
ca/utoronto/utm/assignment1/othello/Othello.java:20: warning: no comment
	public static final int DIMENSION = 8; // This is an 8x8 game
	                        ^
ca/utoronto/utm/assignment1/othello/Othello.java:25: warning: no comment
	public Othello() {
	       ^
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/ca/utoronto/utm/assignment1/othello/OthelloBoard.html...
ca/utoronto/utm/assignment1/othello/OthelloBoard.java:46: warning: no main description
	 * @return the dimension of the Othello board
	   ^
ca/utoronto/utm/assignment1/othello/OthelloBoard.java:54: warning: no main description
	 * @param player either P1 or P2
	   ^
ca/utoronto/utm/assignment1/othello/OthelloBoard.java:65: warning: no main description
	 * @param row starting row, in {0,...,dim-1} (typically {0,...,7})
	   ^
ca/utoronto/utm/assignment1/othello/OthelloBoard.java:163: warning: no main description
	 * @return whether P1,P2 or BOTH have a move somewhere on the board, EMPTY if
	   ^
ca/utoronto/utm/assignment1/othello/OthelloBoard.java:236: warning: no main description
	 * @param player P1 or P2
	   ^
ca/utoronto/utm/assignment1/othello/OthelloBoard.java:280: warning: no description for @param
	 * @param player
	   ^
ca/utoronto/utm/assignment1/othello/OthelloBoard.java:368: warning: no description for @param
	 * @param args
	   ^
ca/utoronto/utm/assignment1/othello/OthelloBoard.java:20: warning: no comment
	public static final char EMPTY = ' ', P1 = 'X', P2 = 'O', BOTH = 'B';
	                                                          ^
ca/utoronto/utm/assignment1/othello/OthelloBoard.java:20: warning: no comment
	public static final char EMPTY = ' ', P1 = 'X', P2 = 'O', BOTH = 'B';
	                         ^
ca/utoronto/utm/assignment1/othello/OthelloBoard.java:20: warning: no comment
	public static final char EMPTY = ' ', P1 = 'X', P2 = 'O', BOTH = 'B';
	                                      ^
ca/utoronto/utm/assignment1/othello/OthelloBoard.java:20: warning: no comment
	public static final char EMPTY = ' ', P1 = 'X', P2 = 'O', BOTH = 'B';
	                                                ^
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/ca/utoronto/utm/assignment1/othello/OthelloControllerHumanVSGreedy.html...
ca/utoronto/utm/assignment1/othello/OthelloControllerHumanVSGreedy.java:35: warning: no description for @param
	 * @param args
	   ^
ca/utoronto/utm/assignment1/othello/ParentController.java:15: warning: no comment
    protected Othello othello;
                      ^
ca/utoronto/utm/assignment1/othello/ParentController.java:16: warning: no comment
    protected ParentPlayer player1;
                           ^
ca/utoronto/utm/assignment1/othello/ParentController.java:17: warning: no comment
    protected ParentPlayer player2;
                           ^
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/ca/utoronto/utm/assignment1/othello/OthelloControllerHumanVSHuman.html...
ca/utoronto/utm/assignment1/othello/OthelloControllerHumanVSHuman.java:90: warning: no description for @param
	 * @param args
	   ^
ca/utoronto/utm/assignment1/othello/OthelloControllerHumanVSHuman.java:14: warning: no comment
	protected Othello othello;
	                  ^
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/ca/utoronto/utm/assignment1/othello/OthelloControllerHumanVSRandom.html...
ca/utoronto/utm/assignment1/othello/OthelloControllerHumanVSRandom.java:34: warning: no description for @param
	 * @param args
	   ^
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/ca/utoronto/utm/assignment1/othello/OthelloControllerRandomVSGreedy.html...
ca/utoronto/utm/assignment1/othello/OthelloControllerRandomVSGreedy.java:37: warning: no description for @param
	 * @param args
	   ^
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/ca/utoronto/utm/assignment1/othello/OthelloControllerRandomVSRandom.html...
ca/utoronto/utm/assignment1/othello/OthelloControllerRandomVSRandom.java:40: warning: no description for @param
	 * @param args
	   ^
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/ca/utoronto/utm/assignment1/othello/PlayerGreedy.html...
ca/utoronto/utm/assignment1/othello/ParentPlayer.java:17: warning: no comment
    protected Othello othello;
                      ^
ca/utoronto/utm/assignment1/othello/ParentPlayer.java:18: warning: no comment
    protected char player;
                   ^
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/ca/utoronto/utm/assignment1/othello/PlayerHuman.html...
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/ca/utoronto/utm/assignment1/othello/PlayerRandom.html...
ca/utoronto/utm/assignment1/othello/PlayerRandom.java:40: error: unknown tag: moveList
	 * Returns a randomly chosen move from <moveList>. The method
	                                       ^
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/ca/utoronto/utm/assignment1/othello/RandomvsRandomTest.html...
ca/utoronto/utm/assignment1/othello/RandomvsRandomTest.java:3: warning: no comment
public class RandomvsRandomTest {
       ^
ca/utoronto/utm/assignment1/othello/RandomvsRandomTest.java:3: warning: use of default constructor, which does not provide a comment
public class RandomvsRandomTest {
       ^
ca/utoronto/utm/assignment1/othello/RandomvsRandomTest.java:4: warning: no comment
    public static void main(String[] args) {
                       ^
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/ca/utoronto/utm/assignment1/othello/package-summary.html...
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/ca/utoronto/utm/assignment1/othello/package-tree.html...
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/constant-values.html...
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/overview-tree.html...
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/allclasses-index.html...
Building index for all classes...
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/allpackages-index.html...
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/index-all.html...
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/search.html...
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/index.html...
Generating /virtual/csc207ta/a1_marking_final/marking/sidd1303/doc/help-doc.html...
1 error
35 warnings
